# fractal-project

./: .clang-format.yml  .editorconfig.ini  CMakeLists.txt  Makefile  README.md  meson.build
.github/workflows/: build.yml
src/: fractal.c  fractal.h  image.c  image.h  main.c  test_main.c
